fix different width and height in scrollbar

--- a/src/components/AdminViews/TableComponent/DataTable.css
+++ b/src/components/AdminViews/TableComponent/DataTable.css
@@ -1,6 +1,7 @@
 /* width */
 .table-wrapper::-webkit-scrollbar {
-  width: 1.7rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 /* Handle */
 .table-wrapper::-webkit-scrollbar-thumb {
@@ -16,6 +17,11 @@
   border-radius: 2rem;
   border: .4rem solid transparent;
 }
+
+.table-wrapper::-webkit-scrollbar-corner{
+  background-color: transparent;
+}
+
 table {
   white-space: nowrap;
 }
